Fix mobile shop animation (#14)
* Add mobile menu

* Add footer

* Remove useless astronaut pic

* Add 404 page

* Change footer layout

* Fix issue with mobile shop animation cutoff

* Remove unused proptype

* Fix paused state and increase animation time

--- a/src/components/styles/shopItem.scss
+++ b/src/components/styles/shopItem.scss
@@ -33,7 +33,7 @@
   align-items: center;
   justify-content: space-evenly;
   transition: all 1s;
-  margin: 3em auto;
+  margin: 30px auto;
 
   &:hover {
     width: 96%;
